--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <!--
   ~ @Copyright 2018-2023 HardBackNutter
   ~ @License GNU General Public License
@@ -17,9 +18,11 @@
   ~
   ~ You should have received a copy of the GNU General Public License
   ~ along with NeverTooManyBooks. If not, see <http://www.gnu.org/licenses/>.
-  --><!DOCTYPE resources [
-<!ENTITY APP_NAME "NeverTooManyBooks">
-]>
+  -->
+
+<!DOCTYPE resources [
+    <!ENTITY APP_NAME "NeverTooManyBooks">
+    ]>
 <!-- Quotes „…”  - Regex to find wrong ones: ('|“|‘|’|«|») --><!--suppress LongLine --><resources>
     <plurals name="displaying_n_books">
         <item quantity="one">%1$d boek</item>
@@ -44,7 +47,7 @@
     <string name="X_action_try_again">Opnieuw</string>
     <string name="X_action_update">Updaten</string>
     <string name="X_action_validate">Valideer</string>
-    <string name="X_btn_customize">Aanpassen…</string>
+    <string name="X_action_customize">Aanpassen…</string>
     <string name="btn_show_list">Lijst weergeven</string>
     <string name="confirm_continue">Weet je zeker dat je door wilt gaan?</string>
     <string name="X_error_authentication_failed">Authenticatie mislukt</string>
@@ -52,8 +55,6 @@
     <string name="X_httpErrorIO">Kan niet communiceren met de server. Probeer het later opnieuw.</string>
     <string name="X_info_not_authorized">Niet geautoriseerd</string>
     <string name="X_info_site_authorization_successful">%1$s autorisatie gelukt</string>
-    <string name="X_lbl_completed">Gereed</string>
-    <string name="X_lbl_created">Aangemaakt</string>
     <string name="X_lbl_folder">Map</string>
     <string name="X_lbl_image">Afbeelding</string>
     <string name="X_lbl_system">(Systeem)</string>
@@ -61,9 +62,9 @@
     <string name="X_neither">Geen van beide</string>
     <string name="X_option_bob_filter_anthology_no">Geen Bloemlezingen</string>
     <string name="X_option_bob_filter_anthology_yes">Bloemlezingen</string>
-    <string name="X_pg_general">Algemeen</string>
+    <string name="X_lbl_general">Algemeen</string>
     <string name="tip_booklist_style_defaults">Gebruik dit scherm om de standaard kenmerken van alle stijlen in te stellen. Deze worden gebruikt door alle ingebouwde stijlen en als uitgangspunt voor elke stijl die je zelf definieert.</string>
-    <string name="X_use_default_setting">Standaardinstellingen gebruiken</string>
+    <string name="X_action_use_default_setting">Standaardinstellingen gebruiken</string>
     <string name="X_whichImageCaptureApplication">Afbeelding vastleggen met</string>
     <string name="X_whichSendToApplication">Verzenden met</string>
     <string name="a_b">%1$s%2$s</string>
@@ -441,8 +442,8 @@
     <string name="option_bob_filter_isbn_yes">Met ISBN</string>
     <string name="option_bob_filter_lend_out_no">Niet Uitgeleende boeken</string>
     <string name="option_bob_filter_lend_out_yes">Uitgeleende boeken</string>
-    <string name="option_bob_filter_read_no">Niet Gelezen boeken</string>
-    <string name="option_bob_filter_read_yes">Gelezen boeken</string>
+    <string name="X_option_bob_filter_read_no">Niet Gelezen boeken</string>
+    <string name="X_option_bob_filter_read_yes">Gelezen boeken</string>
     <string name="option_bob_filter_signed_no">Niet Gesigneerd boeken</string>
     <string name="option_bob_filter_signed_yes">Gesigneerd boeken</string>
     <string name="option_book_sync_list_with_details">Synchroniseer/positioneer de lijst</string>
@@ -530,7 +531,7 @@
     <string name="pe_camera_back">Camera aan de achtezijde</string>
     <string name="pe_camera_front">Camera aan de voorzijde</string>
     <string name="pe_camera_other">Overig</string>
-    <string name="pe_edit_book_isbn_checks_loose">Ruim</string>
+    <string name="loose">Ruim</string>
     <string name="pe_fast_scroller_overlay_dynamic">Dynamisch</string>
     <string name="pe_fast_scroller_overlay_static">Statisch</string>
     <string name="pe_thumbnails_cache_resized_each_time">Herschaal elke keer als ze nodig zijn (gebruikt minder opslagruimte, scrollen zal langzamer gaan)</string>
@@ -739,10 +740,11 @@
     <string name="pt_bob_cover_click">Tikken op een omslagafbeelding.</string>
     <string name="pe_bob_cover_click_zoom">Inzoomen op de omslagafbeelding.</string>
     <string name="pe_bob_cover_click_details">Opent de detailpagina van het boek.</string>
-    <string name="style_type_defaults">Standaardinstellingen stijlen</string>
+    <string name="X_style_type_defaults">Standaardinstellingen stijlen</string>
     <string name="acra_report_saved">U kunt nu de projectpagina op Github bezoeken en een nieuw probleem aanmelden. Voeg het eerder opgeslagen rapport bij het probleem. Als u nog geen Github-account hebt, moet u er een aanmaken.</string>
     <string name="action_report">Melden</string>
     <string name="error_invalid_url">Ongeldig adres (URL)</string>
     <string name="lbl_certificate_validity_period">Geldigheid: %1$s - %2$s</string>
     <string name="lbl_reading">Aan het lezen</string>
+    <string name="action_edit_defaults">Standaardinstellingen bewerken</string>
 </resources>
